feat: cross-encoder reranking, Spring AI migration, eval metrics, Langfuse tracing